feat: show balance over time on reports
